Also refactor other max/min occurrences